--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,4 +19,87 @@ body {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
+  width: 1200px;
+}
+
+.main-header a,
+.main-container a,
+.main-footer a,
+.inner-header a,
+.catalog-hotel-card-list a,
+.pagination a,
+.inner-footer a {
+  color: #000000;
+  background-color: #FFFFFF;
+  text-decoration: none;
+}
+
+.main-header li,
+.main-container li,
+.main-footer li,
+.inner-header li,
+.catalog-hotel-card-list li,
+.pagination li,
+.inner-footer li {
+  list-style-type: none;
+}
+
+.navigation-link {
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.main-feature-paragraph,
+.text-search,
+.heading-subscription {
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.feature-card-link-title {
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.feature-card-link-text {
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+}
+
+.feature-card-link-blue {
+  color: #FFFFFF;
+  background-color: #82B3D3;
+}
+
+.feature-card-link-indigo {
+  color: #000000;
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.feature-card-link-heavenly {
+  color: #000000;
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.main-feature,
+.heading-search,
+.search-button {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.search-button {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #756157;
+  border-radius: 4px;
 }
