--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,12 +78,12 @@ body {
 
 .feature-card-link-indigo {
   color: #000000;
-  background-color: rgba(131, 179, 211, 0.12);
+  background: #83B3D333;
 }
 
 .feature-card-link-heavenly {
   color: #000000;
-  background-color: rgba(131, 179, 211, 0.2);
+  background: #83B3D31F;
 }
 
 .main-feature,
